<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/location"
        android:textColor="@color/colorBlack"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/some_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_above="@+id/input_link"
        android:layout_centerHorizontal="true"
        android:layout_margin="60dp"
        android:background="@drawable/icon" />

    <EditText
        android:id="@+id/input_link"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:hint="@string/link_www" />

    <TextView
        android:id="@+id/link_http"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="8dp"
        android:layout_toStartOf="@+id/input_link"
        android:text="@string/http"
        android:textColor="@color/colorBlack"
        android:textSize="14sp" />

    <Button
        android:id="@+id/link_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="6dp"
        android:layout_toEndOf="@+id/input_link"
        android:text="@string/try_button" />

    <Button
        android:id="@+id/youtube_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_link"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:text="@string/youtube" />

</RelativeLayout>